# llm-playground

./: .gitignore  README.md  pyproject.toml
00-generative-ai/: generative_ai.ipynb
01-embedding-models/: embedding_models.ipynb
02-text-embedding/: text_embedding.ipynb
03-transformer-llm/: transformer_llm.ipynb
03-transformer-llm/tmp/: L1-Embeddings-api-intro.ipynb
04-attention-in-transformers/: attention_in_transformers.ipynb
05-fine-tuning-llms/: fine_tuninig_llms.ipynb
05-fine-tuning-llms/tmp/: llama (1).py
06-reinforcement-learning-from-human-feedback/: reinforcement_learning_from_human_feedback.ipynb
07-pre-training-llms/: pre_training.ipynb
07-pre-training-llms/tmp/: Lesson_1.ipynb
08-federated-learning/: federated_learning.ipynb
08-federated-learning/tmp/: L1_Why_Federated_Learning.ipynb
09-post-training/: post_training.ipynb
10-quantization-fundamentals/: quantization_fundaments.ipynb
11-quantization-in-depth/: quantization-in-depth.ipynb
12-open-source-models/: open_source_models.ipynb
federated-learning/: federated_learning.ipynb
