[project]
name = "llm-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.6"
dependencies = [
    "boto3>=1.40.1",
    "datasets>=4.0.0",
    "gensim>=4.3.2",
    "ipykernel>=6.30.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.1",
    "pytorch-transformers>=1.2.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.54.1",
]
