[project]
name = "llm-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets==2.16.0",
    "flwr[simulation]>=1.20.0",
    "flwr-datasets==0.3.0",
    "gensim>=4.3.3",
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.5",
    "numpy>=1.26.4",
    "pandas>=2.3.1",
    "pytorch-transformers>=1.2.0",
    "scikit-learn>=1.7.1",
    "scipy==1.10.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.54.1",
]
