[project]
name = "llm-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "flwr[simulation]>=1.20.0",
    "gensim>=4.3.3",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "notebook>=7.4.7",
    "numpy>=1.26.4",
    "pandas>=2.3.1",
    "quanto>=0.2.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.2",
    "trl>=0.21.0",
]
